--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
 include LICENSE
 include README.rst
-recursive-include composing_views *.py
+recursive-include composable_views *.py
 recursive-include tests *.py
