--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
-envlist = py{35,36}-django{19,110,111}
-          py{35,36}-djangomaster
-          docs
+envlist =
+  py{34,35,36}-django{19,110,111,201,master}
+  docs
 
 [testenv]
 setenv =
@@ -10,11 +10,11 @@ commands =
   {toxinidir}/runtests.py --with-coverage
 
 deps =
-  coverage
-  django-nose
+  -rrequirements/test.txt
   django19: Django>=1.9,<1.10
   django110: Django>=1.10,<1.11
-  django111: Django>=1.11,<1.12
+  django111: Django>=1.11,<2.0
+  django201: Django==2.0.1
   djangomaster: https://github.com/django/django/archive/master.tar.gz
 
 [testenv:docs]
