--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,15 +2,16 @@ image: alpine
 
 test:
   script:
+    - apk --no-cache add py2-pip python-dev
     - pip install tox
     - tox
 
 pages:
   script:
   - apk --no-cache add py2-pip python-dev
+  - cd docs/
   - pip install -r requirements.txt
   - apk --no-cache add make
-  - cd docs/
   - rm -rf build/
   - make html
   - mv build/html/ ../public/
