--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ stages:
   - publish
 
 before_script:
-  - apk --no-cache add python3.4 python3.5
+  - apt-get install python3.4 python3.5
   - pip install -r requirements/test.txt
   - pip install tox
 
@@ -32,7 +32,7 @@ docs:
   script:
     - cd docs/
     - pip install -r requirements.txt
-    - apk --no-cache add make
+    - apt-get install make
     - rm -rf build/
     - make html
   artifacts:
