--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,6 @@ deps =
 [testenv:docs]
 whitelist_externals=make
 changedir = docs
-deps =
-    sphinx
 commands =
-    make html
+  pip install -r requirements.txt
+  make html
