For django 2.0 - run tests on the latest patch version.

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-  py{36}-django{19,110,111,201,master}
+  py{36}-django{19,110,111,20,master}
   docs
 
 [testenv]
@@ -14,7 +14,7 @@ deps =
   django19: Django>=1.9,<1.10
   django110: Django>=1.10,<1.11
   django111: Django>=1.11,<2.0
-  django201: Django==2.0.1
+  django20: Django>=2.0,<2.1
   djangomaster: https://github.com/django/django/archive/master.tar.gz
 
 [testenv:docs]
